sophons/apps/headscale/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: headscale
spec:
  strategy:
    type: Recreate
  replicas: 1

  selector: {}
  template:
    spec:
      priorityClassName: system-node-critical
      imagePullSecrets:
        - name: harbor-pull-cred

      tolerations:
        - key: orunmila.sophons.cloud/ase-orun
          operator: Exists
        - key: node.cilium.io/agent-not-ready
          operator: Exists

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    # only nodes with some kind of always publicly routable ip
                    values:
                      - sophons-theta
                      - sophons-voltzahl
                      - sophons-oduduwa

          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  # control plane nodes do not need to be able to reach an external
                  # api-server/scheduler
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
              weight: 100

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      # do not depend on cluster DNS
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
          - 9.9.9.9
      dnsPolicy: None
      hostAliases:
        - ip: 10.43.0.69
          hostnames:
            - auth.sophons.cloud
        - ip: 2001:cafe:43::69
          hostnames:
            - auth.sophons.cloud

      containers:
        # - name: proxy
        #   image: docker.io/library/traefik:v3.6.0
        #   args:
        #     - --log.level=DEBUG
        #     - --accesslog=true
        #     - --entrypoints.web.address=:80
        #     # - --entryPoints.web.proxyProtocol.trustedIPs=100.64.0.0/10,fd7a:115c:a1e0::/48
        #     # - --entryPoints.web.forwardedHeaders.trustedIPs=100.64.0.0/10,fd7a:115c:a1e0::/48
        #     - --entryPoints.web.http.redirections.entryPoint.to=websecure
        #     - --entryPoints.web.http.redirections.entryPoint.scheme=https
        #     - --entryPoints.web.http.redirections.entryPoint.permanent=true
        #     - --entrypoints.websecure.address=:443
        #     - --entrypoints.websecure.http.tls=true
        #     # - --entryPoints.websecure.proxyProtocol.trustedIPs=100.64.0.0/10,fd7a:115c:a1e0::/48
        #     # - --entryPoints.websecure.forwardedHeaders.trustedIPs=100.64.0.0/10,fd7a:115c:a1e0::/48
        #     - --providers.file.directory=/etc/traefik
        #   env:
        #     - name: GOMEMLIMIT
        #       valueFrom:
        #         resourceFieldRef:
        #           resource: limits.memory

        #   ports:
        #     - containerPort: 80
        #       name: http
        #     - containerPort: 443
        #       name: https

        #   volumeMounts:
        #     - mountPath: /etc/traefik/provider.yaml
        #       name: config
        #       subPath: traefik.provider.yaml
        #       readOnly: true
        #     - mountPath: /etc/traefik/cert
        #       name: tls
        #       readOnly: true

        #   resources:
        #     requests:
        #       cpu: 25m
        #       memory: 64Mi
        #     limits:
        #       memory: 128Mi

        #   securityContext:
        #     readOnlyRootFilesystem: true
        #     allowPrivilegeEscalation: false
        #     capabilities:
        #       drop: [ALL]
        #       add: [NET_BIND_SERVICE]

        - name: headscale
          image: ghcr.io/juanfont/headscale:v0.27.1
          args: ["serve"]

          ports:
            - containerPort: 8080
              name: hs-http
            - containerPort: 8081
              name: hs-metrics
            - containerPort: 50051
              name: hs-grpc

          volumeMounts:
            - name: headscale
              mountPath: /var/lib/headscale
              subPath: data
            - name: headscale
              mountPath: /var/run/headscale
              subPath: run
            - name: config
              mountPath: "/etc/headscale/config.yaml"
              subPath: headscale.yaml
              readOnly: true
            - name: secret
              mountPath: "/etc/headscale/noise_private.key"
              subPath: noise_private.key
              readOnly: true
            - name: secret
              mountPath: /etc/headscale/oidc_client.secret
              subPath: oidc_client.secret

          livenessProbe:
            exec:
              command: ["headscale", "health"]
            timeoutSeconds: 5
            failureThreshold: 5
            initialDelaySeconds: 15

          readinessProbe:
            exec:
              command: ["headscale", "health"]
            timeoutSeconds: 5
            failureThreshold: 5
            initialDelaySeconds: 15

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 256Mi

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

        - name: headplane
          image: ghcr.io/tale/headplane:0.6.1

          ports:
            - containerPort: 3000
              name: hp-http

          volumeMounts:
            - name: headplane
              mountPath: /var/lib/headplane
              subPath: data
            - name: headplane
              mountPath: /var/lib/headplane/agent
              subPath: agent
            - name: config
              mountPath: "/etc/headplane/config.yaml"
              subPath: headplane.yaml
              readOnly: true
            - name: config
              mountPath: "/etc/headscale/config.yaml"
              subPath: headscale.yaml
              readOnly: true
            - name: secret
              mountPath: /etc/headscale/oidc_client.secret
              subPath: oidc_client.secret

          livenessProbe:
            httpGet:
              path: /admin/healthz
              port: hp-http
            timeoutSeconds: 5
            failureThreshold: 5
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /admin/healthz
              port: hp-http
            timeoutSeconds: 5
            failureThreshold: 5
            initialDelaySeconds: 15

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 256Mi

      volumes:
        # - name: tls
        #   secret:
        #     secretName: gateway-tls
        - name: config
          configMap:
            name: headscale
        - name: secret
          secret:
            secretName: headscale
        - name: litestream
          configMap:
            name: litestream
        - name: headscale
          emptyDir: {}
        - name: headplane
          emptyDir: {}
        - name: cache
          emptyDir: {}
