sophons/apps/headscale/statefulset.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/statefulset-apps-v1.json
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: headscale
  namespace: headscale
spec:
  replicas: 1

  selector: {}
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: NotIn
                    values: [ng]
              weight: 100
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - sophons-voltzahl
              weight: 67

      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: tmp
          emptyDir: {}
        - name: litestream-config
          configMap:
            name: litestream-config
        - name: headplane
          configMap:
            name: headplane
        - name: headscale
          projected:
            sources:
              - configMap:
                  name: headscale
              - secret:
                  name: headscale
                  items:
                    - key: oidc_client.secret
                      path: oidc_client.secret
                    - key: noise_private.key
                      path: noise_private.key

      containers:
        - name: headscale
          image: ghcr.io/juanfont/headscale:v0.29.3@sha256:0e7f1c6e4ce6c2a2a001103ecd3fa645a045adf30ac8a5234fe037b43000cd72
          args: ["serve"]

          ports:
            - containerPort: 8080
              name: hs-http
            - containerPort: 8081
              name: hs-metrics
            - containerPort: 50051
              name: hs-grpc

          volumeMounts:
            - name: tmp
              subPath: headscale
              mountPath: /tmp
            - name: tmp
              mountPath: /var/lib/headscale
              subPath: lib-headscale
            - name: tmp
              mountPath: /var/run/headscale
              subPath: run-headscale
            - name: headscale
              mountPath: /etc/headscale
              readOnly: true

          livenessProbe:
            exec:
              command: ["headscale", "health"]
            # initialDelaySeconds: 15
          readinessProbe:
            exec:
              command: ["headscale", "health"]
            # timeoutSeconds: 5
            # failureThreshold: 5
            # initialDelaySeconds: 15

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

        - name: headplane
          image: ghcr.io/tale/headplane:0.7.0@sha256:7bd6523a14567a43eb4ffa1e95e3d95456b8539c9d081757df3f228b9e836fb5

          ports:
            - containerPort: 3000
              name: hp-http

          volumeMounts:
            - name: tmp
              subPath: headplane
              mountPath: /tmp
            - name: tmp
              mountPath: /var/lib/headplane
              subPath: lib-headplane
            - name: tmp
              mountPath: /var/lib/headplane/agent
              subPath: lib-headplane-agent
            - name: headplane
              mountPath: /etc/headplane
              readOnly: true
            - name: headscale
              mountPath: /etc/headscale
              readOnly: true

          livenessProbe:
            httpGet:
              path: /admin/healthz
              port: hp-http
            # timeoutSeconds: 5
            # failureThreshold: 5
            # initialDelaySeconds: 15
          # readinessProbe:
          #   httpGet:
          #     path: /admin/healthz
          #     port: hp-http
          #   timeoutSeconds: 5
          #   failureThreshold: 5
          #   initialDelaySeconds: 15

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 256Mi
