sophons/apps/headscale/grpcroute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/grpcroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: headscale
  namespace: headscale
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - hs.vrtx.sh

  rules:
    - matches:
        - headers:
            - name: Content-Type
              type: Exact
              value: application/grpc
      backendRefs:
        - name: headscale
          port: 50051
